@@ -538,6 +538,9 @@ and could impact performance.
 Valid subsystems available today (with more to come) include:
 .RS
 .TP 17
+\fBAccrue\fR
+Accrue counters accounting details
+.TP
 \fBBackfill\fR
 Backfill scheduler details
 .TP
