@@ -35,6 +35,7 @@ documents those changes that are of interest to users and administrators.
  -- Added printf attribute to setenvf() and corrected related warnings.
  -- Kill running/pending job is allocated GRES and that GRES has a "File"
     configuration, and the GRES count changes.
+ -- Add new DebugFlag=Accrue for accrue accounting debugging purposes.
 
 * Changes in Slurm 19.05.0pre1
 ==============================
